--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,7 @@
 <ul>
     {{#each burgers}}
         {{#unless devoured}}
-            {{> burgers/burgers-block devoured=true}}
+            {{> burgers devoured=true}}
         {{/unless}}
     {{/each}}
 </ul>
@@ -13,9 +13,9 @@
 <h2>Burgers Consumed</h2>
 
 <ul>
-    {{#each burgers}}
+    {{#each burger}}
         {{#if devoured}}
-            {{> burgers/burgers-block devoured=false}}
+            {{> burgers devoured=false}}
         {{/if}}
     {{/each}}
 </ul>
