--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
-    <title>MVC With Cats!</title>
+    <title>Chow Time!</title>
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="/assets/js/cats.js"></script>
 </head>
 <body>
 {{{ body }}}
+<script src="/assets/js/burger.js"></script>
 </body>
 </html>
