--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,37 +1,38 @@
 <h1>Chow Time!</h1>
 
-<h2>Burgers to be eaten</h2>
+<h2>Burgers Devoured</h2>
 
-<ul>
-    {{#each burgers}}
-        {{#unless devoured}}
-            {{> burgers devoured=true}}
-        {{/unless}}
-    {{/each}}
-</ul>
+<div>
+    <ul>
+        {{#each burgers}}
+            {{#if devoured}}
+                {{> burger-block devoured=true}}
+            {{/if}}
+        {{/each}}
+    </ul>
+</div>
 
-<h2>Burgers Consumed</h2>
+<h2>Burgers To Be Eaten</h2>
 
-<ul>
-    {{#each burger}}
-        {{#if devoured}}
-            {{> burgers devoured=false}}
-        {{/if}}
-    {{/each}}
-</ul>
+<div>
+    <ul>
+        {{#each burgers}}
+            {{#unless devoured}}
+                {{> burger-block devoured=false}}
+            {{/unless}}
+        {{/each}}
+    </ul>
+</div>
 
-<h2>Add a burger</h2>
+
+
+
+<h2>Add a Burger</h2>
 <form class="create-form">
 
     <div class="form-group">
-        <label for="new">Burger Name:</label>
-        <input type="text" id="new" name="name">
-    </div>
-
-    <div class="form-group">
-        <label for="devo">Eat it?</label><br>
-        <input type="radio" name="devour" value="1" checked> Eat it!<br>
-        <input type="radio" name="devour" value="0"> Still There
+        <label for="ca">Burger Name:</label>
+        <input type="text" id="ca" name="name">
     </div>
 
     <button type="submit">Add Burger</button>
