--- a/views/partials/burger-block.handlebars
+++ b/views/partials/burger-block.handlebars
@@ -6,3 +6,13 @@
         </button>
     {{/unless}}
 </li>
+
+<!--<li>{{burger_name}}-->
+
+    <!--{{#if devoured}}-->
+        <!--<button class="change-mind" data-id="{{id}}">-->
+            <!--Nevermind, I don't want it.-->
+        <!--</button>-->
+    <!--{{/if}}-->
+
+<!--</li>-->
