--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,7 @@
 
 <h2>Burgers Devoured</h2>
 
-<div>
+<div class="devoured">
     <ul>
         {{#each burgers}}
             {{#if devoured}}
@@ -14,7 +14,7 @@
 
 <h2>Burgers To Be Eaten</h2>
 
-<div>
+<div class="eat-me">
     <ul>
         {{#each burgers}}
             {{#unless devoured}}
@@ -32,8 +32,8 @@
 
     <div class="form-group">
         <label for="ca">Burger Name:</label>
-        <input type="text" id="ca" name="name">
+        <input type="text" id="text-area" name="name">
     </div>
 
-    <button type="submit">Add Burger</button>
+    <button type="submit" id="add-burger">Add Burger</button>
 </form>
